# wan2.2-i2v-fast

./: README.md  aoti.py  pre-requirements.txt  pyproject.toml  requirements.txt  wan2-2_i2v_app.py  wan_app.py
demo-notebook/: wan2_2_i2v_fast_uv.ipynb
