[project]
name = "wan2-2-i2v-fast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "av>=17.1.0",
    "diffusers",
    "fastapi>=0.137.0",
    "ftfy>=6.3.1",
    "gradio[mcp,oauth]==6.16.0",
    "hf-xet>=1.5.1",
    "huggingface-hub>=0.36.2",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "kernels>=0.12.3",
    "numpy>=2.4.6",
    "omegaconf>=2.3.1",
    "opencv-python>=4.13.0.92",
    "peft",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "sentencepiece>=0.2.1",
    "spaces==0.50.4",
    "termcolor>=3.3.0",
    "torch==2.11.0",
    "torchao>=0.17.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "transformers",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "v4.57.6" }
accelerate = { git = "https://github.com/huggingface/accelerate.git" }
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
peft = { git = "https://github.com/huggingface/peft.git" }
